# Core-Wars

./: CMakeLists.txt  GameLogic.cpp  GameLogic.h  main.cpp
GUI/: CMakeLists.txt
GUI/inc/: GUIArena.h  GUIConstants.h  GUIFileExplorer.h  GUIFileExplorerDialog.h  GUIInstructionDialog.h  GUILogicProxy.h  GUIMainWindow.h  GUIMemoryCell.h  GUIOperationalPanel.h  GUIPlayerStack.h  GUIPlayerTextField.h  GUIPlayersPanel.h  GUIStackPanel.h  GUITextFieldButton.h  GUIToolBar.h  GUIUtils.h  custom_events.h  dbg.h  gui_field.h  mainwindow.h  tool_bar.h
GUI/src/: GUIArena.cpp  GUIConstants.cpp  GUICustomEvents.cpp  GUIFileExplorer.cpp  GUIFileExplorerDialog.cpp  GUIInstructionDialog.cpp  GUILogicProxy.cpp  GUIMainWindow.cpp  GUIMemoryCell.cpp  GUIOperationalPanel.cpp  GUIPlayerStack.cpp  GUIPlayerTextField.cpp  GUIPlayersPanel.cpp  GUIStackPanel.cpp  GUITextFieldButton.cpp  GUIToolBar.cpp  custom_events.cpp  gui_field.cpp  mainwindow.cpp  tool_bar.cpp
Logic/: CMakeLists.txt
Logic/Instructions/: instructions_notes.txt
Logic/Instructions/Operations/DefaultModfierSetters/inc/: DefaultModSetter.h  DefaultModSetterArithm.h  DefaultModSetterDAT.h  DefaultModSetterJump.h  DefaultModSetterMOV.h  DefaultModSetterSLT.h
Logic/Instructions/Operations/DefaultModfierSetters/src/: DefaultModSetterArithm.cpp  DefaultModSetterDAT.cpp  DefaultModSetterJump.cpp  DefaultModSetterMOV.cpp  DefaultModSetterSLT.cpp
Logic/Instructions/Operations/inc/: ADD.h  CMP.h  DIV.h  DJN.h  MOD.h  MOV.h  Operation.h  OperationADD.h  OperationCMP.h  OperationDAT.h  OperationDIV.h  OperationDJN.h  OperationEND.h  OperationEQU.h  OperationJMN.h  OperationJMP.h  OperationJMZ.h  OperationMOD.h  OperationMOV.h  OperationMUL.h  OperationORG.h  OperationSEQ.h  OperationSLT.h  OperationSPL.h  OperationSUB.h  SNE.h  SPL.h  STP.h  SUB.h
Logic/Instructions/Operations/src/: ADD.cpp  CMP.cpp  DJN.cpp  LDP.cpp  MOD.cpp  MUL.cpp  Operation.cpp  OperationADD.cpp  OperationCMP.cpp  OperationDAT.cpp  OperationDIV.cpp  OperationDJN.cpp  OperationEND.cpp  OperationEQU.cpp  OperationJMN.cpp  OperationJMP.cpp  OperationJMZ.cpp  OperationMOD.cpp  OperationMOV.cpp  OperationMUL.cpp  OperationORG.cpp  OperationSEQ.cpp  OperationSLT.cpp  OperationSPL.cpp  OperationSUB.cpp  SLT.cpp  SPL.cpp
Logic/Instructions/Parameters/inc/: Parameter.h  ParameterDirect.h  ParameterImmediate.h  ParameterImmidiate.h  ParameterIndirect.h  ParameterPostInc.h  ParameterPreDecr.h
Logic/Instructions/Parameters/src/: Parameter.cpp  ParameterDirect.cpp  ParameterImmediate.cpp  ParameterImmidiate.cpp  ParameterIndirect.cpp  ParameterPostInc.cpp  ParameterPreDecr.cpp
Logic/Instructions/inc/: ADD.h  DAT.h  Instruction.h  JMN.h  JMP.h  JMZ.h  LDP.h  MUL.h  NOP.h  Operation.h  SEQ.h  SLT.h
Logic/Instructions/src/: DAT.cpp  DIV.cpp  Instruction.cpp  JMN.cpp  JMP.cpp  JMZ.cpp  MOV.cpp  NOP.cpp  SEQ.cpp  SNE.cpp  STP.cpp  SUB.cpp
Logic/Parser/AbstractSyntaxTree/inc/: ASTAddressMode.h  ASTAdressMode.h  ASTArithmExpression.h  ASTClosingBracket.h  ASTEndLine.h  ASTExpression.h  ASTLine.h  ASTModifier.h  ASTNode.h  ASTNumber.h  ASTOperation.h  ASTOptionalParam.h  ASTParameter.h  ASTTerm.cpp  ASTTerm.h
Logic/Parser/AbstractSyntaxTree/src/: ASTAddressMode.cpp  ASTAdressMode.cpp  ASTArithmExpression.cpp  ASTClosingBracket.cpp  ASTEndLine.cpp  ASTExpression.cpp  ASTLine.cpp  ASTModifier.cpp  ASTNumber.cpp  ASTOperation.cpp  ASTOptionalParam.cpp  ASTParameter.cpp  ASTTerm.cpp
Logic/Parser/inc/: CodeBuilder.h  ExprParser.h  Lexer.h  Parser.h  Token.h
Logic/Parser/src/: CodeBuilder.cpp  ExprParser.cpp  Lexer.cpp  Parser.cpp  Token.cpp
Logic/Platform/inc/: Arena.h  Player.h  PlayerHead.h  PlayerInitCode.h
Logic/Platform/src/: Arena.cpp  Player.cpp  PlayerInitCode.cpp
TestSuite/: parsing_tests.cpp
TestSuite/inc/: add_operator.h  cmp_operator.h  code_loader.h  dat_operator.h  default_mod_setter.h  div_operator.h  djn_operator.h  instruction_copying.h  jmn_operator.h  jmp_operator.h  jmz_operator.h  mod_operator.h  mov_operator.h  mul_operator.h  operator_copying.h  param_copying.h  parsing_tests.h  slt_operator.h  sub_operator.h
TestSuite/src/: add_operator.cpp  cmp_operator.cpp  code_loader.cpp  dat_operator.cpp  default_mod_setter.cpp  div_operator.cpp  instruction_copying.cpp  jmz_operator.cpp  mod_operator.cpp  mov_operator.cpp  mul_operator.cpp  operator_copying.cpp  param_copying.cpp  parsing_tests.cpp  slt_operator.cpp
logger/: logger.h
tests/arithm_operations/: test1.txt  test10.txt  test11.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
tests/code_loading/: dwarf.txt  equ_test.txt  imp.txt  paper.txt  scissors.txt  stone.txt  test1.txt  test2.txt
tests/instruction_building/: test1.txt
tests/parsing_tests/: airthm_expr.txt  dat_bomb.txt  extra_param.txt  imp.txt  invalid_modifier.txt  missing_label.txt  (+2 more)
(+29 files in other folders)
